@@ -1,5 +1,7 @@
 2016-03-03  Jason Merrill  <jason@redhat.com>
 
+	* call.c (build_aggr_conv): Use get_nsdmi.
+
 	PR c++/51406
 	* typeck.c (build_static_cast_1): Avoid folding back to lvalue.
 
